--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <footer class="footer">
         
         <div class="footer__logo-box">
-            <img src="img/logo-green-small-2x.png" alt="Full logo" class="footer__logo">
+            <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
         </div>
 
         <div class="row">
@@ -270,17 +270,14 @@
                         <li class="footer__item"><a href="#" class="footer__link">Careers</a></li>
                         <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
                         <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
-
                     </ul>
                 </div>
-
 
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
                     Built by <a href="#" class="footer__link">Basia Chraścik</a>. Designed by Jonas Schmedtmann
                     for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-
                 </p>
             </div>
         </div>
