--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
+
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item"><a href="#about" class="navigation__link"><span>01</span>About Natours</a></li>
+                <li class="navigation__item"><a href="#features" class="navigation__link"><span>02</span> Your benefits</a></li>
+                <li class="navigation__item"><a href="#tours" class="navigation__link"><span>03</span> Popular tours</a></li>
+                <li class="navigation__item"><a href="#book" class="navigation__link"><span>04</span> Book now</a></li>
+                <li class="navigation__item"><a href="#footer" class="navigation__link"><span>04</span> Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
+
         <header class="header">
 
             <div class="header__logo-box">
@@ -25,13 +46,13 @@
                     <span class="heading-primary--main">Outdoors</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+                <a href="#tours" class="btn btn-white btn-animated">Discover our tours</a>
             </div>
 
         </header>
 
     <main>
-        <section class="section-about">
+        <section class="section-about" id="about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exiting tours for adventurous people
@@ -58,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-features">
+        <section class="section-features" id="features">
 
             <div class="row">
                 <div class="col-1-of-4">
@@ -104,7 +125,7 @@
             </div>
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="tours">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Most popular tours
@@ -209,7 +230,7 @@
             </div>
         </section>
 
-        <section class="section-book">
+        <section class="section-book" id="book">
 
             <div class="row">
 
@@ -255,7 +276,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         
         <div class="footer__logo-box">
             <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
