--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="col-1-of-2">
                 <p class="footer__copyright">
                     Built by <a href="#" class="footer__link">Basia Chraścik</a>. Designed by Jonas Schmedtmann
-                    for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
+                    for his online course <a href="https://www.udemy.com/advanced-css-and-sass/" class="footer__link">Advanced CSS and Sass</a>.
                 </p>
             </div>
         </div>
